<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_dark">


<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_dark"
    tools:context=".detail.DetailMovieActivity">


    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="316dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imgMovie"
        android:layout_width="240dp"
        android:layout_height="277dp"
        android:padding="7dp"
        android:src="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.135"
        app:shapeAppearanceOverlay="@style/RoundedSquare" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif"
        android:text="@string/title"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgMovie" />

    <TextView
        android:id="@+id/tv_rilis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        tools:text="@string/rilis"
        android:textColor="@color/placeholder"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/tv_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="|"
        android:textSize="15sp"
        android:textColor="@color/placeholder"
        app:layout_constraintStart_toEndOf="@+id/tv_rilis"
        app:layout_constraintTop_toTopOf="@+id/tv_rilis" />

    <TextView
        android:id="@+id/tv_genre"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:ellipsize="end"
        android:maxLines="2"
        tools:text="@string/genre"
        android:textColor="@color/placeholder"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/textView3" />

    <TextView
        android:id="@+id/direktor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/director"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="@+id/tv_director"
        app:layout_constraintTop_toBottomOf="@+id/tv_director" />

    <TextView
        android:id="@+id/tv_director"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        tools:text="@string/director"
        android:maxLines="2"
        android:ellipsize="end"
        android:textColor="@color/placeholder"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/tv_rilis"
        app:layout_constraintTop_toBottomOf="@+id/tv_rilis" />

    <TextView
        android:id="@+id/screen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/screenplay"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="@+id/tv_screen"
        app:layout_constraintTop_toBottomOf="@+id/tv_screen" />

    <TextView
        android:id="@+id/tv_screen"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="2"
        tools:text="@string/screenplay"
        android:textColor="@color/placeholder"
        android:textSize="15sp"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toEndOf="@+id/tv_director"
        app:layout_constraintTop_toTopOf="@+id/tv_director" />

    <TextView
        android:id="@+id/overview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/overview"
        android:textSize="19sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:fontFamily="sans-serif"
        app:layout_constraintStart_toStartOf="@+id/direktor"
        app:layout_constraintTop_toBottomOf="@+id/direktor" />


    <TextView
        android:id="@+id/tv_desc"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        tools:text="@string/overview"
        android:textColor="@color/placeholder"
        android:textSize="15sp"
        android:justificationMode="inter_word"
        app:layout_constraintStart_toStartOf="@+id/overview"
        app:layout_constraintTop_toBottomOf="@+id/overview" />



</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>