<resources>
    <string name="app_name">SubmissionArchitectureComponent</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action">Action</string>
    <string name="title">Title</string>
    <string name="rilis">rilis</string>
    <string name="genre">Genre</string>
    <string name="movies">Movies</string>
    <string name="tvshow">TV Show</string>
    <string name="what_s_popular">What`s Popular</string>
    <string name="share_text">Let`s Watching %s </string>
    <string name="director">Director</string>
    <string name="screenplay">Screenplay</string>
    <string name="overview">Overview</string>
    <string name="share">Share</string>


</resources>